_generated-doc/2.7/config/quarkus-mailer-config-group-trust-store-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mailer-config-group-trust-store-config_configuration]]link:#quarkus-mailer-config-group-trust-store-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.password]]`link:#quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.password[quarkus.mailer.truststore.password]`

[.description]
--
Sets the trust store password if any. Note that the password is only used for JKS and PCK++#++12 trust stores.
--|string 
|


a| [[quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.paths]]`link:#quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.paths[quarkus.mailer.truststore.paths]`

[.description]
--
Sets the location of the trust store files. If you use JKS or PCK++#++12, only one path is allowed. If you use PEM files, you can specify multiple paths. 
 The relative paths are relative to the application working directly.
--|list of string 
|


a| [[quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.type]]`link:#quarkus-mailer-config-group-trust-store-config_quarkus.mailer.truststore.type[quarkus.mailer.truststore.type]`

[.description]
--
Sets the trust store type. By default, it guesses the type from the file name extension. For instance, `truststore.pem` will be seen as a PEM file, while `truststore.jks` will be seen as a JKS file. `truststore.p12` and `truststore.pfx` will both be seen as PCK++#++12 files. Accepted values are: `JKS`, `PEM`, `PCKS`.
--|string 
|

|===